chore(env): добавил переменные окружения в CoreConfig, связанные с postgresDb

--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -5,11 +5,20 @@ NODE_ENV=
 # Порт, на котором запускается приложение
 PORT=
 
-# URI для основной базы данных Mongo
-MONGO_URL=
+# Хост PostgreSQL сервера
+POSTGRES_HOST=
 
-# Name основной базы данных Mongo
-DB_NAME=
+# Порт PostgreSQL сервера (обычно 5432)
+POSTGRES_PORT=
+
+# Имя пользователя для подключения к PostgreSQL
+POSTGRES_USER=
+
+# Пароль пользователя PostgreSQL
+POSTGRES_PASSWORD=
+
+# Название базы данных PostgreSQL
+POSTGRES_DB_NAME=
 
 # Ключ для подписи Access токена
 JWT_SECRET_AT=
