--- a/src/env/.env.testing
+++ b/src/env/.env.testing
@@ -2,8 +2,12 @@
 
 PORT=3000
 
-MONGO_URL=mongodb://localhost:27017
-DB_NAME=blogger-platform-test
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=user
+POSTGRES_PASSWORD=password
+POSTGRES_DB_NAME=test-db
+
 
 JWT_SECRET_AT=9116c387-31bb-4fff-8587-7fd1bd41215d
 JWT_SECRET_RT=babf4b6f-ba0b-473c-b02a-f86ff8706f85
