--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles %npm_config_testfile%",
     "test:e2e": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles %npm_config_testfile%",
     "test:e2e-all": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand",
-    "test:unit": "cross-env NODE_ENV=testing jest --config test/jest-unit.json --runInBand --detectOpenHandles %npm_config_testfile%",
+    "test:unit": "cross-env NODE_ENV=testing jest --config test/jest-unit.json --runInBand --detectOpenHandles",
     "test:int": "cross-env NODE_ENV=testing jest --config test/jest-int.json --runInBand --detectOpenHandles %npm_config_testfile%"
   },
   "dependencies": {
