--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
+    "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
     "chalk": "4",
     "class-transformer": "^0.5.1",
@@ -48,6 +49,7 @@
     "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
+    "typeorm": "^0.3.26",
     "ua-parser-js": "^2.0.3"
   },
   "devDependencies": {
