refactor(users): настроил конфигурацию куки через конфиг

--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -62,5 +62,20 @@ JWT_EXPIRATION_AT=
 # Время жизни Refresh токена
 JWT_EXPIRATION_RT=
 
+# Устанавливает флаг HttpOnly для cookie, чтобы ограничить доступ клиентского JavaScript к ним (true/false)
+HTTP_ONLY=
+
+# Устанавливает флаг Secure для cookie; если true, cookie передаются только по HTTPS соединению (true/false)
+SECURE=
+
+# Политика SameSite для cookie, ограничивающая отправку cookie в кросс-доменных запросах (strict, lax, none)
+SAME_SITE=
+
+# Максимальное время жизни cookie в миллисекундах (например, 3600000 для часа)
+MAX_AGE=
+
+# Путь для cookie, указывающий для каких URL cookie доступны (обычно "/")
+PATH=
+
 # Вывод в логи информации о результатах выполнения теста (каждого в отдельности)
 TEST_LOGGING_ENABLED=
