--- a/src/env/.env.testing
+++ b/src/env/.env.testing
@@ -30,6 +30,12 @@ IS_SWAGGER_ENABLED=false
 JWT_EXPIRATION_AT=1m
 JWT_EXPIRATION_RT=2m
 
+HTTP_ONLY=true
+SECURE=true
+SAME_SITE=strict
+MAX_AGE=120000
+PATH=/
+
 TEST_LOGGING_ENABLED=false
 
 
