--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -29,6 +29,12 @@ IS_SWAGGER_ENABLED=true
 JWT_EXPIRATION_AT=5m
 JWT_EXPIRATION_RT=10m
 
+HTTP_ONLY=true
+SECURE=true
+SAME_SITE=strict
+MAX_AGE=120000
+PATH=/
+
 TEST_LOGGING_ENABLED=false
 
 
