fix(package.json): исправил скрипт для запуска тестов в режиме дебага

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "cross-env NODE_ENV=testing jest --runInBand",
     "test:watch": "cross-env NODE_ENV=testing jest --watch",
     "test:cov": "cross-env NODE_ENV=testing jest --coverage",
-    "test:debug": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles %npm_config_testfile%",
+    "test:debug:inspect": "cross-env NODE_ENV=testing node --inspect-brk ./node_modules/.bin/jest --runInBand --config ./test/jest-e2e.json --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles",
     "test:e2e-all": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand",
     "test:unit": "cross-env NODE_ENV=testing jest --config test/jest-unit.json --runInBand --detectOpenHandles",
