feat(env): добавил в переменные окружения доп поля для конфигурации typeOrm

--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -20,6 +20,15 @@ POSTGRES_PASSWORD=
 # Название базы данных PostgreSQL
 POSTGRES_DB_NAME=
 
+# Включает автоматическую загрузку сущностей TypeORM из кода проекта (true/false)
+AUTO_LOAD_ENTITIES=
+
+# Позволяет не указывать сущности вручную в конфигурации. Обычно true в dev, false в продакшене для оптимизации
+SYNCHRONIZE=
+
+# Включает логирование запросов TypeORM (true/false или уровень логирования: all, query, error)
+LOGGING=
+
 # Ключ для подписи Access токена
 JWT_SECRET_AT=
 
