--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -7,6 +7,10 @@ POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_DB_NAME=db-dev
+AUTO_LOAD_ENTITIES=true
+SYNCHRONIZE=true
+LOGGING=true
+
 
 JWT_SECRET_AT=9116c387-31bb-4fff-8587-7fd1bd41215d
 JWT_SECRET_RT=babf4b6f-ba0b-473c-b02a-f86ff8706f85
