--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.65.0",
     "chalk": "4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-parser": "^1.4.7",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
+    "ioredis": "^5.8.2",
     "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-http": "^0.3.0",
@@ -68,6 +70,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/date-fns": "^2.6.3",
     "@types/express": "^5.0.0",
+    "@types/ioredis": "^5.0.0",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.14.1",
     "@types/nodemailer": "^6.4.17",
