chore(env): добавил переменные окружения для redis

--- a/src/env/.env.development
+++ b/src/env/.env.development
@@ -11,6 +11,9 @@ AUTO_LOAD_ENTITIES=true
 SYNCHRONIZE=true
 LOGGING=true
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 
 JWT_SECRET_AT=9116c387-31bb-4fff-8587-7fd1bd41215d
 JWT_SECRET_RT=babf4b6f-ba0b-473c-b02a-f86ff8706f85
@@ -32,6 +35,8 @@ IS_SWAGGER_ENABLED=true
 
 JWT_EXPIRATION_AT=5m
 JWT_EXPIRATION_RT=10m
+
+GAME_FINISH_TIMEOUT_MS=10000
 
 HTTP_ONLY=true
 SECURE=true
