--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -29,6 +29,12 @@ SYNCHRONIZE=
 # Включает логирование запросов TypeORM (true/false или уровень логирования: all, query, error)
 LOGGING=
 
+# Хост Redis сервера (localhost для локальной разработки)
+REDIS_HOST=
+
+# Порт Redis (стандартный 6379)
+REDIS_PORT=
+
 # Ключ для подписи Access токена
 JWT_SECRET_AT=
 
@@ -70,6 +76,10 @@ JWT_EXPIRATION_AT=
 
 # Время жизни Refresh токена
 JWT_EXPIRATION_RT=
+
+# Таймаут завершения игры в миллисекундах (10 секунд = 10000 мс)
+# Когда первый игрок отвечает на все вопросы, второму дается именно столько времени
+GAME_FINISH_TIMEOUT_MS=
 
 # Устанавливает флаг HttpOnly для cookie, чтобы ограничить доступ клиентского JavaScript к ним (true/false)
 HTTP_ONLY=
