--- a/src/env/.env.testing
+++ b/src/env/.env.testing
@@ -11,6 +11,9 @@ AUTO_LOAD_ENTITIES=true
 SYNCHRONIZE=true
 LOGGING=false
 
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
 JWT_SECRET_AT=9116c387-31bb-4fff-8587-7fd1bd41215d
 JWT_SECRET_RT=babf4b6f-ba0b-473c-b02a-f86ff8706f85
 
@@ -31,6 +34,8 @@ IS_SWAGGER_ENABLED=false
 
 JWT_EXPIRATION_AT=1m
 JWT_EXPIRATION_RT=2m
+
+GAME_FINISH_TIMEOUT_MS=10000
 
 HTTP_ONLY=true
 SECURE=true
