feat(quiz): добавил функционал автоматического завершения игры через 10 секунд если второй игрок не успел ответить на все вопросы

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test:watch": "cross-env NODE_ENV=testing jest --watch",
     "test:cov": "cross-env NODE_ENV=testing jest --coverage",
     "test:debug:inspect": "cross-env NODE_ENV=testing node --inspect-brk ./node_modules/.bin/jest --runInBand --config ./test/jest-e2e.json --detectOpenHandles",
+    "test-int:debug:inspect": "cross-env NODE_ENV=testing node --inspect-brk ./node_modules/.bin/jest --runInBand --config test/jest-int.json --detectOpenHandles",
     "test:e2e": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand --detectOpenHandles",
     "test:e2e-all": "cross-env NODE_ENV=testing jest --config ./test/jest-e2e.json --runInBand",
     "test:unit": "cross-env NODE_ENV=testing jest --config test/jest-unit.json --runInBand --detectOpenHandles",
@@ -28,6 +29,7 @@
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
+    "@nestjs/bullmq": "^11.0.4",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
@@ -35,11 +37,11 @@
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/schedule": "^6.0.1",
     "@nestjs/swagger": "^11.2.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "bcrypt": "^5.1.1",
-    "bullmq": "^5.65.0",
     "chalk": "4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
