chore(config): добавил в UserAccountsConfig свойство sessionCleanupRetentionDays

--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -75,6 +75,9 @@ JWT_EXPIRATION_RT=
 # Когда первый игрок отвечает на все вопросы, второму дается именно столько времени
 GAME_FINISH_TIMEOUT_MS=
 
+# Количество дней хранения мягко удаленных (soft-deleted) сессий перед их окончательным (hard) удалением.
+SESSION_CLEANUP_RETENTION_DAYS=
+
 # Устанавливает флаг HttpOnly для cookie, чтобы ограничить доступ клиентского JavaScript к ним (true/false)
 HTTP_ONLY=
 
