--- a/src/env/.env.testing
+++ b/src/env/.env.testing
@@ -34,6 +34,8 @@ JWT_EXPIRATION_RT=2m
 
 GAME_FINISH_TIMEOUT_MS=10000
 
+SESSION_CLEANUP_RETENTION_DAYS=90
+
 HTTP_ONLY=true
 SECURE=true
 SAME_SITE=strict
