refactor(config): реструктуризировать .env файлы с группировкой по категориям

--- a/src/env/.env.production.example
+++ b/src/env/.env.production.example
@@ -1,33 +1,9 @@
-# INFRASTRUCTURE + SECRETS + DANGEROUS CONFIGURATION
+# ========== ОКРУЖЕНИЕ ==========
+ENV=
 
-NODE_ENV=
-
+# ========== API ==========
 # Порт, на котором запускается приложение
 PORT=
-
-# Хост PostgreSQL сервера
-POSTGRES_HOST=
-
-# Порт PostgreSQL сервера (обычно 5432)
-POSTGRES_PORT=
-
-# Имя пользователя для подключения к PostgreSQL
-POSTGRES_USER=
-
-# Пароль пользователя PostgreSQL
-POSTGRES_PASSWORD=
-
-# Название базы данных PostgreSQL
-POSTGRES_DB_NAME=
-
-# Включает автоматическую загрузку сущностей TypeORM из кода проекта (true/false)
-AUTO_LOAD_ENTITIES=
-
-# Позволяет не указывать сущности вручную в конфигурации. Обычно true в dev, false в продакшене для оптимизации
-SYNCHRONIZE=
-
-# Включает логирование запросов TypeORM (true/false или уровень логирования: all, query, error)
-LOGGING=
 
 # Ключ для подписи Access токена
 JWT_SECRET_AT=
@@ -35,17 +11,11 @@ JWT_SECRET_AT=
 # Ключ для подписи Refresh токена
 JWT_SECRET_RT=
 
-# Основной email с которого будет осуществляться рассылка пользователям
-EMAIL_APP=
+Время жизни Access токена
+JWT_EXPIRATION_AT=
 
-# Пароль основного email с которого будет осуществляться рассылка пользователям
-EMAIL_APP_PASSWORD=
-
-# Логин администратора
-ADMIN_LOGIN=
-
-# Пароль администратора
-ADMIN_PASSWORD=
+# Время жизни Refresh токена
+JWT_EXPIRATION_RT=
 
 # Время жизни "окна" для лимита запросов (throttling) в секундах, например: 10000
 THROTTLE_TTL=
@@ -63,21 +33,6 @@ SEND_INTERNAL_SERVER_ERROR_DETAILS=
 для большинства окружений должен быть false
 INCLUDE_TESTING_MODULE=
 
-# APPLICATION/DOMAIN SETTINGS
-
-# Время жизни Access токена
-JWT_EXPIRATION_AT=
-
-# Время жизни Refresh токена
-JWT_EXPIRATION_RT=
-
-# Таймаут завершения игры в миллисекундах (10 секунд = 10000 мс)
-# Когда первый игрок отвечает на все вопросы, второму дается именно столько времени
-GAME_FINISH_TIMEOUT_MS=
-
-# Количество дней хранения мягко удаленных (soft-deleted) сессий перед их окончательным (hard) удалением.
-SESSION_CLEANUP_RETENTION_DAYS=
-
 # Устанавливает флаг HttpOnly для cookie, чтобы ограничить доступ клиентского JavaScript к ним (true/false)
 HTTP_ONLY=
 
@@ -92,6 +47,61 @@ MAX_AGE=
 
 # Путь для cookie, указывающий для каких URL cookie доступны (обычно "/")
 PATH=
+
+# ========== БАЗА ДАННЫХ ==========
+# Хост PostgreSQL сервера
+POSTGRES_HOST=
+
+# Порт PostgreSQL сервера (обычно 5432)
+POSTGRES_PORT=
+
+# Имя пользователя для подключения к PostgreSQL
+POSTGRES_USER_NAME=
+
+# Пароль пользователя PostgreSQL
+POSTGRES_PASSWORD=
+
+# Название базы данных PostgreSQL
+POSTGRES_DATA_BASE=
+
+# Включает автоматическую загрузку сущностей TypeORM из кода проекта (true/false)
+POSTGRES_AUTO_LOAD_ENTITIES=
+
+# Позволяет не указывать сущности вручную в конфигурации. Обычно true в dev, false в продакшене для оптимизации
+POSTGRES_SYNCHRONIZE=
+
+# Включает логирование запросов TypeORM (true/false или уровень логирования: all, query, error)
+POSTGRES_LOGGING=
+
+# ========== SWAGGER ==========
+SWAGGER_USER=
+SWAGGER_PASSWORD=
+SWAGGER_PATH=
+SWAGGER_SERVERS_URLS=
+
+# ========== ЛОГИРОВАНИЕ ==========
+LOGGING=
+LOGGER_HOST=
+
+# ========== БИЗНЕС ПРАВИЛА ==========
+# Основной email с которого будет осуществляться рассылка пользователям
+EMAIL_APP=
+
+# Пароль основного email с которого будет осуществляться рассылка пользователям
+EMAIL_APP_PASSWORD=
+
+# Логин администратора
+ADMIN_LOGIN=
+
+# Пароль администратора
+ADMIN_PASSWORD=
+
+# Таймаут завершения игры в миллисекундах (10 секунд = 10000 мс)
+# Когда первый игрок отвечает на все вопросы, второму дается именно столько времени
+GAME_FINISH_TIMEOUT_MS=
+
+# Количество дней хранения мягко удаленных (soft-deleted) сессий перед их окончательным (hard) удалением.
+SESSION_CLEANUP_RETENTION_DAYS=
 
 # Вывод в логи информации о результатах выполнения теста (каждого в отдельности)
 TEST_LOGGING_ENABLED=
